{
  "sourceLanguage" : "de",
  "strings" : {
    "Aufräumen" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aufräumen"
          }
...
            "state" : "translated",
            "value" : "保留的媒体：%lld"
          }
        }
      }
    },
    "Bestätigen" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bestätigen"
          }
...
            "state" : "translated",
            "value" : "图片"
          }
        }
      }
    },
    "Bis:" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bis:"
          }
...
            "state" : "translated",
            "value" : "启用云同步"
          }
        }
      }
    },
    "Datenbank zurücksetzen" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Datenbank zurücksetzen"
          }
...
            "state" : "translated",
            "value" : "可用空间：%@"
          }
        }
      }
    },
    "Galerie Ordner" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Galerie-Ordner"
          }
...
            "state" : "translated",
            "value" : "删除确认"
          }
        }
      }
    },
    "Löschen" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Löschen"
          }
...
            "state" : "translated",
            "value" : "选择媒体类型"
          }
        }
      }
    },
    "Ordner auswählen" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ordner auswählen"
          }
...
            "state" : "translated",
            "value" : "隐私政策"
          }
        }
      }
    },
    "settingsButton" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "settingsButton"
          }
...
            "state" : "translated",
            "value" : "支持请求"
          }
        }
      }
    },
    "Teilen" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Teilen"
          }
...
            "state" : "translated",
            "value" : "视频"
          }
        }
      }
    },
    "Von:" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Von:"
          }
...
            "state" : "translated",
            "value" : "清理图库 的更新内容"
          }
        }
      }
    },
    "Zeitraum auswählen" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zeitraum auswählen"
          }
...
