...
            .overlay(
                Group {
                    if showSlideOver {
                        SlideOverView(message: "Datenbank wurde zurückgesetzt")
                            .transition(.move(edge: .trailing))
                            .zIndex(1)
                            .accessibilityIdentifier("slideOverMessage")
                    }
                }
            )
        }
    }
}
...
