...
                            } else {
                                AssetImageView(asset: currentAsset, imageCache: imageCache)
                                    .clipShape(RoundedRectangle(cornerRadius: min(abs(totalTranslation) / 5, 40)))
                            }
                        }
                        .accessibilityElement()
                        .accessibilityIdentifier("assetMediaView")
                        .accessibilityLabel(currentAsset.localIdentifier)
                        .id(currentAsset.localIdentifier)
                        .frame(width: geometry.size.width, height: geometry.size.height)
                        .offset(x: totalTranslation, y: 0)
                        .rotation3DEffect(
                            Angle.degrees(Double(totalTranslation) / 15),
...
